force-app/main/default/objects/Shipment/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <type>Text</type>
    <length>80</length>
    <description>Carrier or shipping provider for this shipment.</description>
</CustomField>