force-app/main/default/objects/Shipment/fields/Delivered_At__c.field-meta.xml
<CustomField>
    <fullName>Delivered_At__c</fullName>
    <label>Delivered At</label>
    <type>DateTime</type>
    <description>Timestamp when carrier/shipping provider confirmed delivery. Required proof before agent can call an order delivered.</description>
</CustomField>