force-app/main/default/objects/Shipment/fields/Fulfillment_Order__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Order__c</fullName>
    <label>Fulfillment Order</label>
    <type>Lookup</type>
    <referenceTo>FulfillmentOrder</referenceTo>
    <relationshipLabel>Kwitko Shipments</relationshipLabel>
    <relationshipName>Kwitko_Shipments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fulfillment order this shipment fulfills.</description>
</CustomField>