force-app/main/default/objects/Shipment/fields/Last_Event_Description__c.field-meta.xml
<CustomField>
    <fullName>Last_Event_Description__c</fullName>
    <label>Last Event Description</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Human-readable latest shipment/carrier event for grounded agent replies.</description>
</CustomField>