force-app/main/default/objects/Shipment/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Lookup</type>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce order this shipment belongs to. Used by agent service actions as shipment source of truth.</description>
</CustomField>