force-app/main/default/objects/Shipment/fields/Shipped_At__c.field-meta.xml
<CustomField>
    <fullName>Shipped_At__c</fullName>
    <label>Shipped At</label>
    <type>DateTime</type>
    <description>Timestamp when carrier/shipping provider first marked the shipment shipped.</description>
</CustomField>