force-app/main/default/objects/Shipment/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <label>Tracking Number</label>
    <type>Text</type>
    <length>120</length>
    <externalId>true</externalId>
    <description>Carrier tracking number from WooCommerce/shipping provider.</description>
</CustomField>