force-app/main/default/objects/Shipment/fields/Tracking_Url__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Url__c</fullName>
    <label>Tracking URL</label>
    <type>Url</type>
    <description>Carrier tracking URL.</description>
</CustomField>